Move gen-hyprel.c

--- a/arch/arm64/tools/Makefile
+++ b/arch/arm64/tools/Makefile
@@ -22,3 +22,9 @@ $(kapi)/cpucaps.h: $(src)/gen-cpucaps.awk $(src)/cpucaps FORCE
 
 $(kapi)/sysreg-defs.h: $(src)/gen-sysreg.awk $(src)/sysreg FORCE
 	$(call if_changed,gen_sysreg)
+
+HOST_EXTRACFLAGS += -I$(objtree)/include
+hostprogs += gen-hyprel
+PHONY += gen-hyprel
+gen-hyprel: $(obj)/gen-hyprel
+	@:
